add option to automatically split cells containing multiple lines in dictionary

--- a/csv-translation/index.html
+++ b/csv-translation/index.html
@@ -57,6 +57,13 @@
                 <input class="input-text" type="text" maxlength="1" value="&quot;" size="1" required />
             </div>
 
+            <div id="input-autosplit" class="container">
+                <label for="radio-autosplit" class="pure-checkbox">
+                    <input id="radio-autosplit" type="checkbox" value="">
+                    Automatically split multi-lines cells in dictionary
+                </label>
+            </div>
+
         </div>
         <div id="submit" class="pure-form">
             <button id="submit-button" class="pure-button">Translate</button>
