--- a/csv-translation/index.html
+++ b/csv-translation/index.html
@@ -23,19 +23,19 @@
         <div id="inputs" class="pure-form">
 
             <div id="input-format" class="container">
-                <label for="select-format">Select CSV format of input file</label>
+                <label for="select-format">Select translation mode</label>
                 <select id="select-format" class="pure-input-1-2">
                     <option value="Standard" selected>Standard</option>
                     <option value="MultipleLanguages">Multiple Languages</option>
-                    <option value="PowerCMS">PowerCMS</option>
+                    <option value="PowerCMS">PowerCMS CSV</option>
                     <!--<option value="UTF8">Movable</option>-->
                 </select>
             </div>
 
             <div id="input-content" class="container">
-                <input class="input-path" type="text" placeholder="Select Content CSV file..." readonly>
+                <input class="input-path" type="text" placeholder="Select Content CSV or HTML file..." readonly>
                 <button class="input-button pure-button">Browse</button>
-                <input class="input-file" type="file" accept=".csv"/>
+                <input class="input-file" type="file" accept="text/csv, text/html">
             </div>
 
             <div id="input-dictionary" class="container">
@@ -53,15 +53,20 @@
             </div>
 
             <div id="input-quotechar" class="container">
-                <label for="select-encoding">Select the Quotechar</label>
+                <label>Select the Quotechar</label>
                 <input class="input-text" type="text" maxlength="1" value="&quot;" size="1" required />
             </div>
 
             <div id="input-autosplit" class="container">
                 <label for="radio-autosplit" class="pure-checkbox">
-                    <input id="radio-autosplit" type="checkbox" value="">
+                    <input id="radio-autosplit" type="checkbox" value="" checked>
                     Automatically split multi-lines cells in dictionary
                 </label>
+            </div>
+
+            <div id="input-escapechar" class="container">
+                <label for="text-escapechar">Characters to escape in dictionary (1st char of each cell): </label>
+                <textarea id="text-escapechar" class="input-text" type="text"  value="" placeholder="separate chars with | or ｜" required> </textarea>
             </div>
 
         </div>
