save as zip when multi language html input

--- a/csv-translation/index.html
+++ b/csv-translation/index.html
@@ -8,6 +8,7 @@
     <script src="vendor/papaparse.min.js"></script> <!--https://www.papaparse.com/-->
     <script src="vendor/encoding.min.js"></script> <!--https://github.com/polygonplanet/encoding.js-->
     <script src="vendor/filesaver.js"></script> <!--https://github.com/eligrey/FileSaver.js-->
+    <script src="vendor/jszip.min.js"></script> <!--https://stuk.github.io/jszip/-->
     <script src="lib/index.js"></script>
 
     <!--CSS-->
