default chars to escape

--- a/csv-translation/index.html
+++ b/csv-translation/index.html
@@ -67,7 +67,7 @@
 
             <div id="input-escapechar" class="container">
                 <label for="text-escapechar">Characters to escape in dictionary (1st char of each cell): </label>
-                <textarea id="text-escapechar" class="input-text" type="text"  value="" placeholder="separate chars with | or ｜" required> </textarea>
+                <textarea id="text-escapechar" class="input-text" type="text"  value="" placeholder="separate chars with | or ｜" required>・|•|※</textarea>
             </div>
 
         </div>
